sources = files(
    'Widgets/WebItem.vala',
    'Widgets/Views/WebItemsView.vala',
    'Widgets/Views/Editor.vala',
    'Widgets/Browser.vala',
    'Windows/WebApp.vala',
    'Objects/DesktopFile.vala',
    'Dialogs/Preferences.vala',
    'Services/DesktopFilesManager.vala',
    'Settings.vala',
    'MainWindow.vala',
    'Application.vala'
)